[gd_scene load_steps=20 format=2]

[ext_resource path="res://StarField/StarField.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ShipAvatar.gd" type="Script" id=2]
[ext_resource path="res://sprites/LSS_Transporter.png" type="Texture" id=3]
[ext_resource path="res://Audio/SFX/270553__littlerobotsoundfactory__warpdrive-00.ogg" type="AudioStream" id=5]
[ext_resource path="res://Audio/SFX/274187__littlerobotsoundfactory__spaceengine-controlroom-loop-00.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/NavArrow.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/FuelRange.gd" type="Script" id=8]
[ext_resource path="res://scripts/IntraClusterMediumTracker.gd" type="Script" id=9]
[ext_resource path="res://sprites/ship_test.png" type="Texture" id=10]
[ext_resource path="res://sprites/ship_test_light1.png" type="Texture" id=11]
[ext_resource path="res://ShipGenerator/ShipGenerator.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/WormholeAction.gd" type="Script" id=13]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0.859375, 1, 1, 0.382355, 0.483758, 0.523438, 0 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0, 0.859375, 1, 1, 0.382355, 0.483758, 0.523438, 0 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 0.382355, 0.483758, 0.523438, 0 )

[sub_resource type="Animation" id=4]
resource_name = "BlinkRed"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.2, 2.5 ),
"transitions": PoolRealArray( 1, 0.482968, 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 4, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 0.46875, 0, 1, 0.382355, 0.483758, 0.523438, 0 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 0.796875, 0, 1, 0.382355, 0.483758, 0.523438, 0 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 30, 30 )

[node name="ShipAvatarView" type="Node2D"]
light_mask = -2147483647

[node name="ShipAvatar" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="WormholeAction" type="Node2D" parent="ShipAvatar"]
script = ExtResource( 13 )

[node name="StarField" parent="ShipAvatar" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
amount = 500

[node name="FuelRange" type="Node2D" parent="ShipAvatar"]
visible = false
script = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="ShipAvatar"]
current = true

[node name="Warpdrive" type="CPUParticles2D" parent="ShipAvatar"]
position = Vector2( -32, -16 )
amount = 100
lifetime = 0.1
preprocess = 1.0
local_coords = false
spread = 135.97
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 10.0
scale_amount = 12.0
color_ramp = SubResource( 1 )

[node name="Thruster2" type="CPUParticles2D" parent="ShipAvatar/Warpdrive"]
position = Vector2( -1.72853e-06, 32 )
amount = 100
lifetime = 0.1
preprocess = 1.0
local_coords = false
spread = 135.97
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 10.0
scale_amount = 12.0
scale_amount_random = 1.0
color_ramp = SubResource( 2 )

[node name="Audio" type="AudioStreamPlayer" parent="ShipAvatar/Warpdrive"]

[node name="SpeedShift" type="AudioStreamPlayer" parent="ShipAvatar/Warpdrive"]
stream = ExtResource( 5 )

[node name="Thruster" type="CPUParticles2D" parent="ShipAvatar"]
position = Vector2( -32, -16 )
amount = 50
lifetime = 0.5
preprocess = 1.0
local_coords = false
spread = 135.97
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 10.0
scale_amount = 7.0
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="Thruster2" type="CPUParticles2D" parent="ShipAvatar/Thruster"]
position = Vector2( -1.72853e-06, 32 )
amount = 50
lifetime = 0.5
preprocess = 1.0
local_coords = false
spread = 135.97
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 10.0
scale_amount = 7.0
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="Audio" type="AudioStreamPlayer2D" parent="ShipAvatar/Thruster"]

[node name="ship_test_light1" type="Sprite" parent="ShipAvatar"]
rotation = -1.5708
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ShipAvatar/ship_test_light1"]
autoplay = "BlinkRed"
anims/BlinkRed = SubResource( 4 )

[node name="ShipGenerator" parent="ShipAvatar" instance=ExtResource( 12 )]

[node name="ship_test" type="Sprite" parent="ShipAvatar"]
visible = false
self_modulate = Color( 1.3, 1.2, 1.3, 1 )
rotation = -1.5708
texture = ExtResource( 10 )

[node name="LSS_Transporter" type="Sprite" parent="ShipAvatar"]
position = Vector2( 160, 0 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Thruster3" type="CPUParticles2D" parent="ShipAvatar/LSS_Transporter"]
position = Vector2( -20, 28 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
amount = 50
lifetime = 0.5
preprocess = 1.0
local_coords = false
spread = 135.97
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 10.0
scale_amount = 12.0
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="Thruster2" type="CPUParticles2D" parent="ShipAvatar/LSS_Transporter/Thruster3"]
position = Vector2( 2.08616e-06, 80 )
amount = 50
lifetime = 0.5
preprocess = 1.0
local_coords = false
spread = 135.97
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 10.0
scale_amount = 12.0
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="Thruster3" type="CPUParticles2D" parent="ShipAvatar/LSS_Transporter/Thruster3"]
position = Vector2( -8, 40 )
amount = 50
lifetime = 0.5
preprocess = 1.0
local_coords = false
spread = 135.97
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 10.0
scale_amount = 12.0
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="Thruster4" type="CPUParticles2D" parent="ShipAvatar/LSS_Transporter"]
position = Vector2( -20, 28 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
amount = 100
lifetime = 0.1
preprocess = 1.0
local_coords = false
spread = 135.97
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 10.0
scale_amount = 17.0
color_ramp = SubResource( 5 )

[node name="Thruster2" type="CPUParticles2D" parent="ShipAvatar/LSS_Transporter/Thruster4"]
position = Vector2( 2.08616e-06, 80 )
amount = 100
lifetime = 0.1
preprocess = 1.0
local_coords = false
spread = 135.97
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 10.0
scale_amount = 17.0
scale_amount_random = 1.0
color_ramp = SubResource( 5 )

[node name="Thruster3" type="CPUParticles2D" parent="ShipAvatar/LSS_Transporter/Thruster4"]
position = Vector2( -8, 40 )
amount = 100
lifetime = 0.1
preprocess = 1.0
local_coords = false
spread = 135.97
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 10.0
scale_amount = 17.0
scale_amount_random = 1.0
color_ramp = SubResource( 6 )

[node name="Audio" type="AudioStreamPlayer2D" parent="ShipAvatar/LSS_Transporter"]
stream = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipAvatar"]
shape = SubResource( 7 )

[node name="SystemNavArrow" parent="ShipAvatar" instance=ExtResource( 7 )]
visible = false
modulate = Color( 0.960784, 1, 0.270588, 1 )

[node name="OutpostNavArrow" parent="ShipAvatar" instance=ExtResource( 7 )]
UseOutpostInstead = true

[node name="AnomalyNavArrow" parent="ShipAvatar" instance=ExtResource( 7 )]
visible = false
modulate = Color( 0.709804, 0, 1, 0.513726 )
UseNebulaInstead = true

[node name="target-debug" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="target-debug"]
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
color = Color( 1, 0, 0.984314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntraClusterMediumTracker" type="Node2D" parent="."]
script = ExtResource( 9 )
